<resources>
    <string name="app_name">Posted</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="discover_guides">Discover Guides</string>
    <string name="discover_locations">Discover Locations</string>
    <string name="chat">Chat</string>
    <string name="location">Location</string>
    <string name="guide">Guide</string>
    <string name="title_activity_settings">Settings</string>

    <string name="locations_visited">Locations Visited</string>
    <string name="preferences">Preferences</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>

    <!-- strings for shared preference keys -->
    <string name="saved_pref_file_key">Preference File</string>
    <string name="saved_name_key">User Name</string>
    <string name="saved_email_key">User Email</string>

    <!-- Strings related to AccountSettings -->

    <!-- Preference settings -->
    <string name="pref_header_preferences">Preferences</string>
    <string name="pref_summary_preferences">Change what types of places are suggested</string>

    <string name="pref_category_food">Food</string>
    <string name="pref_title_american">American</string>
    <string name="pref_title_southern">Southern</string>
    <string name="pref_title_chinese">Chinese</string>
    <string name="pref_title_korean">Korean</string>
    <string name="pref_title_japanese">Japanese</string>
    <string name="pref_title_thai">Thai</string>
    <string name="pref_title_vietnamese">Vietnamese</string>
    <string name="pref_title_indian">Indian</string>
    <string name="pref_title_hawaiian">Hawaiian</string>
    <string name="pref_title_mexican">Mexican</string>
    <string name="pref_title_italian">Italian</string>
    <string name="pref_title_french">French</string>
    <string name="pref_title_brazilian">Brazilian</string>
    <string name="pref_title_seafood">Seafood</string>
    <string name="pref_title_steakhouse">Steakhouse</string>
    <string name="pref_title_halal">Halal</string>
    <string name="pref_title_delis">Delis</string>
    <string name="pref_title_cafes">Cafes</string>
    <string name="pref_title_foodtrucks">Food Trucks</string>
    <string name="pref_title_gastropubs">Gastropub</string>
    <string name="pref_title_bars">Bars</string>

    <string name="pref_category_other">Other</string>
    <string name="pref_title_shopping">Shopping</string>
    <string name="pref_title_nightlife">Nightlife</string>
    <string name="pref_title_fitness">Fitness</string>
    <string name="pref_title_beauty">Beauty and Spas</string>
    <string name="pref_title_automotive">Automotive</string>
    <string name="pref_title_homeservices">Home Services</string>
    <string name="pref_title_arts">Arts and Entertainment</string>
    <string name="pref_title_health">Health and Medical</string>
    <string name="pref_title_professional">Professional Services</string>
    <string name="pref_title_pets">Pets</string>
    <string name="pref_title_realestate">Real Estate</string>
    <string name="pref_title_hotels">Hotels and Travel</string>
    <string name="pref_title_local">Local Services</string>
    <string name="pref_title_events">Event Planning and Services</string>
    <string name="pref_title_public">Public Services and Government</string>
    <string name="pref_title_financial">Financial Services</string>
    <string name="pref_title_education">Education</string>
    <string name="pref_title_religious">Religious Organizations</string>
    <string name="pref_title_localflavor">Local Flavor</string>
    <string name="pref_title_media">Mass Media</string>

    <!-- Location settings -->
    <string name="pref_header_locations">Locations</string>
    <string name="pref_summary_locations">Check which places you\'ve marked as visited</string>


    <!-- Example settings for NotificationSettings -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_notifications">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


</resources>
