<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_location"
            android:title="@string/discover_locations" />
        <item
            android:id="@+id/nav_guides"
            android:icon="@drawable/ic_guide"
            android:title="@string/discover_guides" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
    </group>

    <group android:id="@+id/nav_settings_group"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="Settings" />
    </group>

</menu>
